--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8"> 
     </head>
     <body>
+        <script src="https://use.fonticons.com/ce4e0ad3.js"></script>
         <script src="assets/app.js"></script>
     </body>
 </html>
